# speedboat-api

./: Cargo.toml  README.md
.github/: FUNDING.yml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: db.rs  main.rs
src/routes/: admin.rs  auth.rs  guilds.rs  mod.rs  users.rs
